--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/DKolod/goit-nodejs-hw-01-CLI#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "commander": "^9.4.0",
+    "nanoid": "^3.3.4"
   }
 }
